--- a/package.json
+++ b/package.json
@@ -18,14 +18,11 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/test-utils": "^2.2.6",
     "eslint": "^8.22.0",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.3",
-    "prettier": "^2.7.1",
-    "sass": "^1.57.1",
-    "sass-loader": "^13.2.0",
     "vite": "^4.0.0",
     "vite-plugin-pwa": "^0.14.1",
     "vitest": "^0.25.6"
